--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,10 +2,14 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "components/": ["./src/components/"],
-      "containers/": ["./src/containers/"],
-      "pages/": ["./src/pages/"],
-      "styles/": ["./src/styles/"]
+      "components/*": ["./src/components/*"],
+      "containers/*": ["./src/containers/*"],
+      "pages/*": ["./src/pages/*"],
+      "services/*": ["./src/services/*"],
+      "styles/*": ["./src/styles/*"],
+      "requests/*": ["./src/requests/*"],
+      "utils/*": ["./src/utils/*"],
+      "stories/*": ["./stories/*"]
     }
   },
   "exclude": ["node_modules"]
